JuliaSimplificadaParser.py
# Generated from JuliaSimplificadaParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JuliaSimplificadaParser ( Parser ):

    grammarFileName = "JuliaSimplificadaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'end'", "'return'", "'if'", 
                     "'else'", "'elseif'", "'for'", "'in'", "'while'", "'Int'", 
                     "'Float'", "'String'", "'Bool'", "'+'", "'-'", "'*'", 
                     "'/'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'&&'", "'||'", "'!'", "'='", "'::'", "':'", "','", 
                     "'('", "')'", "'['", "']'", "';'" ]

    symbolicNames = [ "<INVALID>", "FUNCTION", "END", "RETURN", "IF", "ELSE", 
                      "ELSEIF", "FOR", "IN", "WHILE", "INT_TYPE", "FLOAT_TYPE", 
                      "STRING_TYPE", "BOOL_TYPE", "PLUS", "MINUS", "MULT", 
                      "DIV", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "AND", 
                      "OR", "NOT", "ASSIGN", "TYPE_ASSIGN", "COLON", "COMMA", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "SEMI", 
                      "BOOL", "INT", "FLOAT", "STRING", "IDENTIFIER", "WS", 
                      "COMMENT", "MULTILINE_COMMENT" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_parameterList = 2
    RULE_parameter = 3
    RULE_type = 4
    RULE_statement = 5
    RULE_assignment = 6
    RULE_returnStatement = 7
    RULE_ifStatement = 8
    RULE_forLoop = 9
    RULE_expressionStatement = 10
    RULE_expression = 11
    RULE_logicalOrExpression = 12
    RULE_logicalAndExpression = 13
    RULE_equalityExpression = 14
    RULE_relationalExpression = 15
    RULE_additiveExpression = 16
    RULE_multiplicativeExpression = 17
    RULE_unaryExpression = 18
    RULE_primaryExpression = 19

    ruleNames =  [ "program", "functionDecl", "parameterList", "parameter", 
                   "type", "statement", "assignment", "returnStatement", 
                   "ifStatement", "forLoop", "expressionStatement", "expression", 
                   "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression" ]

    EOF = Token.EOF
    FUNCTION=1
    END=2
    RETURN=3
    IF=4
    ELSE=5
    ELSEIF=6
    FOR=7
    IN=8
    WHILE=9
    INT_TYPE=10
    FLOAT_TYPE=11
    STRING_TYPE=12
    BOOL_TYPE=13
    PLUS=14
    MINUS=15
    MULT=16
    DIV=17
    EQ=18
    NEQ=19
    LT=20
    GT=21
    LTE=22
    GTE=23
    AND=24
    OR=25
    NOT=26
    ASSIGN=27
    TYPE_ASSIGN=28
    COLON=29
    COMMA=30
    LPAREN=31
    RPAREN=32
    LBRACKET=33
    RBRACKET=34
    SEMI=35
    BOOL=36
    INT=37
    FLOAT=38
    STRING=39
    IDENTIFIER=40
    WS=41
    COMMENT=42
    MULTILINE_COMMENT=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JuliaSimplificadaParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuliaSimplificadaParser.StatementContext)
            else:
                return self.getTypedRuleContext(JuliaSimplificadaParser.StatementContext,i)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = JuliaSimplificadaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2132518371482) != 0):
                self.state = 40
                self.statement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(JuliaSimplificadaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(JuliaSimplificadaParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(JuliaSimplificadaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(JuliaSimplificadaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JuliaSimplificadaParser.RPAREN, 0)

        def END(self):
            return self.getToken(JuliaSimplificadaParser.END, 0)

        def parameterList(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ParameterListContext,0)


        def TYPE_ASSIGN(self):
            return self.getToken(JuliaSimplificadaParser.TYPE_ASSIGN, 0)

        def type_(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.TypeContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuliaSimplificadaParser.StatementContext)
            else:
                return self.getTypedRuleContext(JuliaSimplificadaParser.StatementContext,i)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)




    def functionDecl(self):

        localctx = JuliaSimplificadaParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(JuliaSimplificadaParser.FUNCTION)
            self.state = 49
            self.match(JuliaSimplificadaParser.IDENTIFIER)
            self.state = 50
            self.match(JuliaSimplificadaParser.LPAREN)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 51
                self.parameterList()


            self.state = 54
            self.match(JuliaSimplificadaParser.RPAREN)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 55
                self.match(JuliaSimplificadaParser.TYPE_ASSIGN)
                self.state = 56
                self.type_()


            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2132518371482) != 0):
                self.state = 59
                self.statement()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(JuliaSimplificadaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuliaSimplificadaParser.ParameterContext)
            else:
                return self.getTypedRuleContext(JuliaSimplificadaParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JuliaSimplificadaParser.COMMA)
            else:
                return self.getToken(JuliaSimplificadaParser.COMMA, i)

        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = JuliaSimplificadaParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.parameter()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 68
                self.match(JuliaSimplificadaParser.COMMA)
                self.state = 69
                self.parameter()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JuliaSimplificadaParser.IDENTIFIER, 0)

        def TYPE_ASSIGN(self):
            return self.getToken(JuliaSimplificadaParser.TYPE_ASSIGN, 0)

        def type_(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.TypeContext,0)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = JuliaSimplificadaParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(JuliaSimplificadaParser.IDENTIFIER)
            self.state = 76
            self.match(JuliaSimplificadaParser.TYPE_ASSIGN)
            self.state = 77
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(JuliaSimplificadaParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(JuliaSimplificadaParser.FLOAT_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(JuliaSimplificadaParser.STRING_TYPE, 0)

        def BOOL_TYPE(self):
            return self.getToken(JuliaSimplificadaParser.BOOL_TYPE, 0)

        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = JuliaSimplificadaParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.AssignmentContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.FunctionDeclContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ReturnStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.IfStatementContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ForLoopContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = JuliaSimplificadaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.functionDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.returnStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.ifStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.forLoop()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.expressionStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JuliaSimplificadaParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(JuliaSimplificadaParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = JuliaSimplificadaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(JuliaSimplificadaParser.IDENTIFIER)
            self.state = 90
            self.match(JuliaSimplificadaParser.ASSIGN)
            self.state = 91
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(JuliaSimplificadaParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = JuliaSimplificadaParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(JuliaSimplificadaParser.RETURN)
            self.state = 94
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(JuliaSimplificadaParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuliaSimplificadaParser.StatementContext)
            else:
                return self.getTypedRuleContext(JuliaSimplificadaParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(JuliaSimplificadaParser.ELSE, 0)

        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = JuliaSimplificadaParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(JuliaSimplificadaParser.IF)
            self.state = 97
            self.expression()
            self.state = 98
            self.statement()
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 99
                self.match(JuliaSimplificadaParser.ELSE)
                self.state = 100
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(JuliaSimplificadaParser.FOR, 0)

        def IDENTIFIER(self):
            return self.getToken(JuliaSimplificadaParser.IDENTIFIER, 0)

        def IN(self):
            return self.getToken(JuliaSimplificadaParser.IN, 0)

        def expression(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.StatementContext,0)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)




    def forLoop(self):

        localctx = JuliaSimplificadaParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(JuliaSimplificadaParser.FOR)
            self.state = 104
            self.match(JuliaSimplificadaParser.IDENTIFIER)
            self.state = 105
            self.match(JuliaSimplificadaParser.IN)
            self.state = 106
            self.expression()
            self.state = 107
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = JuliaSimplificadaParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrExpression(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.LogicalOrExpressionContext,0)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = JuliaSimplificadaParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.logicalOrExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuliaSimplificadaParser.LogicalAndExpressionContext)
            else:
                return self.getTypedRuleContext(JuliaSimplificadaParser.LogicalAndExpressionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(JuliaSimplificadaParser.OR)
            else:
                return self.getToken(JuliaSimplificadaParser.OR, i)

        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_logicalOrExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOrExpression" ):
                listener.enterLogicalOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOrExpression" ):
                listener.exitLogicalOrExpression(self)




    def logicalOrExpression(self):

        localctx = JuliaSimplificadaParser.LogicalOrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_logicalOrExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.logicalAndExpression()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 114
                self.match(JuliaSimplificadaParser.OR)
                self.state = 115
                self.logicalAndExpression()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equalityExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuliaSimplificadaParser.EqualityExpressionContext)
            else:
                return self.getTypedRuleContext(JuliaSimplificadaParser.EqualityExpressionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(JuliaSimplificadaParser.AND)
            else:
                return self.getToken(JuliaSimplificadaParser.AND, i)

        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_logicalAndExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalAndExpression" ):
                listener.enterLogicalAndExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalAndExpression" ):
                listener.exitLogicalAndExpression(self)




    def logicalAndExpression(self):

        localctx = JuliaSimplificadaParser.LogicalAndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_logicalAndExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.equalityExpression()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 122
                self.match(JuliaSimplificadaParser.AND)
                self.state = 123
                self.equalityExpression()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JuliaSimplificadaParser.RelationalExpressionContext)
            else:
                return self.getTypedRuleContext(JuliaSimplificadaParser.RelationalExpressionContext,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(JuliaSimplificadaParser.EQ)
            else:
                return self.getToken(JuliaSimplificadaParser.EQ, i)

        def NEQ(self, i:int=None):
            if i is None:
                return self.getTokens(JuliaSimplificadaParser.NEQ)
            else:
                return self.getToken(JuliaSimplificadaParser.NEQ, i)

        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_equalityExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityExpression" ):
                listener.enterEqualityExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualityExpression" ):
                listener.exitEqualityExpression(self)




    def equalityExpression(self):

        localctx = JuliaSimplificadaParser.EqualityExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_equalityExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.relationalExpression()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18 or _la==19:
                self.state = 134
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [18]:
                    self.state = 130
                    self.match(JuliaSimplificadaParser.EQ)
                    self.state = 131
                    self.relationalExpression()
                    pass
                elif token in [19]:
                    self.state = 132
                    self.match(JuliaSimplificadaParser.NEQ)
                    self.state = 133
                    self.relationalExpression()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpression(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.AdditiveExpressionContext,0)


        def LT(self):
            return self.getToken(JuliaSimplificadaParser.LT, 0)

        def GT(self):
            return self.getToken(JuliaSimplificadaParser.GT, 0)

        def LTE(self):
            return self.getToken(JuliaSimplificadaParser.LTE, 0)

        def GTE(self):
            return self.getToken(JuliaSimplificadaParser.GTE, 0)

        def relationalExpression(self):
            return self.getTypedRuleContext(JuliaSimplificadaParser.RelationalExpressionContext,0)


        def getRuleIndex(self):
            return JuliaSimplificadaParser.RULE_relationalExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpression" ):
                listener.enterRelationalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpression" ):
                listener.exitRelationalExpression(self)




    def relationalExpression(self):
